--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="defaultmessage">学院</p>
         <p class="exactinfo">通信工程学院</p>
         <p class="defaultmessage">导师姓名</p>
-        <p class="exactinfo">朱朝阳</p>
+        <input>朱朝阳</input>
         <p class="defaultmessage">辅导员姓名</p>
         <p class="exactinfo">李一一</p>
         <p class="defaultmessage">本人手机号</p>
